--- a/Medix/Views/Home/Index.cshtml
+++ b/Medix/Views/Home/Index.cshtml
@@ -186,7 +186,7 @@
                             '<td>' + res.ETA + '</td>' +
                             '<td>' + res.ClientName + '</td>' +
                             '<td>' + res.StatusName + '</td>' +
-                            '<td><a href="#" onclick="return GetbyID(' + res.WorkOrderId + ')">Edit</a> | <a href="#" onclick="DeletebyID(' + res.WorkOrderId + ')">Delete</a></td>' +
+                            '<td><a href="#" class="btn btn-success mr-sm-1" onclick="return GetbyID(' + res.WorkOrderId + ')">Edit</a><a href="#" class="btn btn-danger" onclick="DeletebyID(' + res.WorkOrderId + ')">Delete</a></td>' +
                             '</tr>');
                         $(".tbody").append(thtml);
                         $('#modalDlg').modal('hide');
@@ -223,14 +223,14 @@
                     contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
                     data: formdata,
                     success: (res) => {
-                        var nhtml = ('<td>' + res.WorkOrderId + '</td>' +
+                        var nhtml = ('<td>' + res.WorkOrderID + '</td>' +
                             '<td>' + res.WorkOrderNumber + '</td>' +
                             '<td>' + res.CreatedDate + '</td>' +
                             '<td>' + res.ETA + '</td>' +
                             '<td>' + res.ClientName + '</td>' +
                             '<td>' + res.StatusName + '</td>' +
-                            '<td><a href="#" onclick="return GetbyID(' + res.WorkOrderId + ')">Edit</a> | <a href="#" onclick="DeletebyID(' + res.WorkOrderId + ')">Delete</a></td>');
-                        $('#' + res.WorkOrderId).html(nhtml);
+                            '<td><a href="#" class="btn btn-success mr-sm-1" onclick="return GetbyID(' + res.WorkOrderID + ')">Edit</a><a href="#" class="btn btn-danger" onclick="DeletebyID(' + res.WorkOrderID + ')">Delete</a></td>');
+                        $('#' + res.WorkOrderID).html(nhtml);
                         $('#modalDlg').modal('hide');
                         $('#btnUpdate').hide();
                         $('#btnAdd').show();
