--- a/Medix/Views/Home/Index.cshtml
+++ b/Medix/Views/Home/Index.cshtml
@@ -230,7 +230,8 @@
                             '<td>' + res.ClientName + '</td>' +
                             '<td>' + res.StatusName + '</td>' +
                             '<td><a href="#" class="btn btn-success mr-sm-1" onclick="return GetbyID(' + res.WorkOrderID + ')">Edit</a><a href="#" class="btn btn-danger" onclick="DeletebyID(' + res.WorkOrderID + ')">Delete</a></td>');
-                        $('#' + res.WorkOrderID).html(nhtml);
+
+                        $('tr#' + res.WorkOrderID).html(nhtml);
                         $('#modalDlg').modal('hide');
                         $('#btnUpdate').hide();
                         $('#btnAdd').show();
